[gd_scene load_steps=9 format=3 uid="uid://ceu771rqxpk0b"]

[ext_resource type="Script" uid="uid://jrjectm2vb7w" path="res://scripts/main.gd" id="1_jyhfs"]
[ext_resource type="Script" uid="uid://k6ogbk2xyl4c" path="res://scripts/ball.gd" id="1_o5qli"]
[ext_resource type="Script" uid="uid://cmfwidtdp07pg" path="res://scripts/play_paddle.gd" id="2_0wfyh"]
[ext_resource type="Script" uid="uid://48xb82e14347" path="res://scripts/enemy_paddle.gd" id="3_sugp2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sgp6g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5qli"]
size = Vector2(100, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wfyh"]
size = Vector2(20, 1280)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sugp2"]
size = Vector2(720, 20)

[node name="Main" type="Node2D"]
script = ExtResource("1_jyhfs")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(362, 677)
script = ExtResource("1_o5qli")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_sgp6g")

[node name="ColorRect" type="ColorRect" parent="Ball"]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="PlayPaddle" type="StaticBody2D" parent="."]
position = Vector2(360, 1240)
script = ExtResource("2_0wfyh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayPaddle"]
shape = SubResource("RectangleShape2D_o5qli")

[node name="ColorRect" type="ColorRect" parent="PlayPaddle"]
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0

[node name="EnemyPaddle" type="CharacterBody2D" parent="."]
position = Vector2(360, 40)
script = ExtResource("3_sugp2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyPaddle"]
shape = SubResource("RectangleShape2D_o5qli")

[node name="ColorRect" type="ColorRect" parent="EnemyPaddle"]
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0

[node name="Wall" type="Node" parent="."]

[node name="WallLeft" type="StaticBody2D" parent="Wall"]
position = Vector2(0, 640)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/WallLeft"]
shape = SubResource("RectangleShape2D_0wfyh")

[node name="WallRight" type="StaticBody2D" parent="Wall"]
position = Vector2(720, 640)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/WallRight"]
shape = SubResource("RectangleShape2D_0wfyh")

[node name="GoalMain" type="Area2D" parent="."]
position = Vector2(360, 1291)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalMain"]
shape = SubResource("RectangleShape2D_sugp2")

[node name="GoalEnemy" type="Area2D" parent="."]
position = Vector2(360, -11)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalEnemy"]
shape = SubResource("RectangleShape2D_sugp2")

[node name="ScoreEnemy" type="Label" parent="."]
offset_left = 18.0
offset_top = 593.0
offset_right = 58.0
offset_bottom = 616.0
text = "0"

[node name="ScoreMain" type="Label" parent="."]
offset_left = 18.0
offset_top = 657.0
offset_right = 58.0
offset_bottom = 680.0
text = "0"

[connection signal="body_entered" from="GoalMain" to="." method="_on_goal_main_body_entered"]
[connection signal="body_entered" from="GoalEnemy" to="." method="_on_goal_enemy_body_entered"]
